Changelog
=========

What follows is a history of changes from release to release.  Where issue IDs
are listed below, you can find out more about them by visiting the issue
tracker at https://oodt.jpl.nasa.gov/jira/browse/CA.

0.0.8 — Upgrades
----------------

Made compatible with Plone 4.1.5.  Also, made a generic Group Space that can
be used for non-organ-specific groups, such as EDRN working groups and
committees.


0.0.7 — Freedom
---------------

This release happens to include:

* CA-885 - Creating collaborative groups relies on well-known content
  rules—which may be reconfigured or even deleted


0.0.6 — Misc
------------

This release covers:

* CA-513 - Science Data List on the Portal - by updating datasets with links
  to collaborative groups that are marked as "owning" datasets.
* CA-849 - Collaborative Group's "Top 3 Projects" list appears on EVERY tab


0.0.5 — Highlights
------------------

This release handles:

* CA-806 - Create a "Highlights" section on the Collaborative Group pages


0.0.4 — Fonties
---------------

This release tackles:

* CA-800 - Funny fonts under the "Data" tab of a Collaborative Group


0.0.3 — Side Effects
--------------------

This release adjusts the testing fixture layers as a result of
eke.biomarker-1.1.5's new dependency on eke.ecas.


0.0.2 — A Little Spit & Polish
------------------------------

This release:

* Adds separate chair and co-chairs to collaborative groups.
* Hides all other members in a collapsible section.
* Adds a log in reminder to the Overview tab.
* Datasets under the Data tab link directly into ECAS.


0.0.1 — First Release
---------------------

First public release of EDRN Collaborations.


0.0.0 — Initial Implementation
------------------------------

This release provides initial function of EDRN Collaborations.