@@ -10,16 +10,33 @@
         <title>Collaborations Folder</title>
     </head>
     <body>
-        <metal:content-core fill-slot='content-core' tal:define='haveGroups view/haveGroups'>
-            <h2 i18n:translate='edrnsiteCollaborationsHeadingGroups'>Groups</h2>
-            <p tal:condition='not:haveGroups' class='discreet' i18n:translate='edrnsiteCollaborationsAdmonitionNoGroups'>
-                There are no collaborative groups in this folder.
+        <metal:content-core fill-slot='content-core' tal:define='
+            haveCollaborativeGroups view/haveCollaborativeGroups;
+            haveGroupSpaces         view/haveGroupSpaces;
+        '>
+            <h2 i18n:translate='edrnsiteGroupWorkSpaces'>Group Work Spaces</h2>
+            <p tal:condition='not:haveGroupSpaces' class='discreet' i18n:translate='edrnsiteCollaborationsAdmonitionNoGroupSpaces'>
+                There are no group spaces in this folder.
             </p>
-            <ul tal:condition='haveGroups'>
-                <li tal:repeat='group view/groups'>
+            <ul tal:condition='haveGroupSpaces'>
+                <li tal:repeat='group view/groupSpaces'>
                     <a href='#' title='One of the swankiest groups ever.' tal:content='group/title'
                         tal:attributes='href group/url; title group/description'>
-                        The Rat Pack
+                        The Rat Pack Group Space
+                    </a>
+                </li>
+            </ul>
+
+            <h2 i18n:translate='edrnsiteCollaborationsHeadingGroups'>Organ Collaborative Groups</h2>
+            <p tal:condition='not:haveCollaborativeGroups' class='discreet'
+                i18n:translate='edrnsiteCollaborationsAdmonitionNoCollaborativeGroups'>
+                There are no organ collaborative groups in this folder.
+            </p>
+            <ul tal:condition='haveCollaborativeGroups'>
+                <li tal:repeat='group view/collaborativeGroups'>
+                    <a href='#' title='One of the swankiest groups ever.' tal:content='group/title'
+                        tal:attributes='href group/url; title group/description'>
+                        The Rat Pack Collaborative Group
                     </a>
                 </li>
             </ul>
