@@ -19,6 +19,7 @@ RESERVED. U.S. Government Sponsorship acknowledged.
     <property name='filter_content_types'>True</property>
     <property name='allowed_content_types'>
         <element value='Collaborative Group'/>
+        <element value='Group Space'/>
     </property>
     <property name='allow_discussion'>True</property>
     <property name='default_view'>view</property>
